fix(frontend): scrollbar z-index (#2924)
Former-commit-id: 55de9629ccdc0a5fa4cff3d17faa10fab28adb71
Former-commit-id: cb0b3c56527d124ada96a7563cb8e83f687ffba4

--- a/frontend/src/assets/css/tailwind.css
+++ b/frontend/src/assets/css/tailwind.css
@@ -238,6 +238,10 @@
   input[type="number"].hide-ticker {
     -moz-appearance: textfield;
   }
+
+  .fix-scrollbar-z-index {
+    transform: translate3d(0, 0, 0);
+  }
 }
 
 .fade-enter-active,
